		What has changed in GDB?
	     (Organized release by release)

*** Changes since GDB 13

* New convenience variables

$_thread_workgroup
  The workgroup coordinates of the current thread.  Unsigned int vector
  of size 3, when available.  Otherwise, void.

$_workitem_local_id
  The local ID coordinates of the workitem processed by the current context,
  within its thread's workgroup.  Unsigned int vector of size 3, when
  available.  Otherwise, void.

$_workitem_global_id
  The global ID coordinates of the workitem processed by the current context.
  Unsigned int vector of size 3, when available.  Otherwise, void.

* New commands

set suppress-mi-notifications (on|off)
show suppress-mi-notifications
  This controls whether printing the notifications is suppressed for MI.
  Notifications such as "thread-selected" (thread context switch),
  "frame-selected" (frame context switch), "*stopped" (thread stopped),
  "running" (thread running) can be suppressed.

maint jit dump
  Dump an in-memory JIT object into a file.

set|show scheduler-locking-eval (on|off)
  The new setting allows a user to lock scheduler during inferior calls.
  It can be set in parallel to scheduler-locking step or replay mode.

info devices
  Show additional information about inferiors which are considered
  devices by GDB.  For devices, the description displayed by 'info
  inferiors' has been changed.  The new description displays them as a
  'device' together with their PCI slot and sub-device ID.  This allows
  one to uniquely identify devices in 'info inferiors' with devices
  displayed in 'info devices'.

* Changed commands

info threads [-gid] [-stopped] [ID]...
  This command now takes an optional flag, '-stopped', that causes only
  the stopped threads to be printed.  The flag can be useful to get a
  reduced list when there is a large number of unstopped threads.

thread apply thread-list|all|all-lanes -unavailable
  Command now defaults to applying only to available threads.  To